[package]
name = "ip3"
version = "1.0.0"
edition = "2021"

description = "Convert between three words and IPV4 addresses"
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/ferrilab/bitvec"
rust-version = "1.56"

[features]

default=["en"]
en = []

[dependencies]
bitvec = "1.0.1"
const-str = "0.5.6"
