[package]
name = "ip3-cli"
version = "1.0.0"
edition = "2021"

description = "ip3 CLI"
license = "LGPL-2.1-only"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
ip3 = { path = "../ip3_lib"}
